Fixed H1 Letter Spacing on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -99,10 +99,12 @@ a {
 
 #hello-sander {
   font-family: 'Lusitana';
+  /* font-weight: 600; */
   font-size: 2.7rem;
   margin: 0 0 1rem 0;
   transition: transform 0.5s ease;
   line-height: 125%;
+  letter-spacing: 0.01em;
 }
 
 #intro {
@@ -132,14 +134,22 @@ li:not(:last-child) {
   opacity: 0.95;
 }
 
+
+
 .proj {
   max-width: 33%;
-
 }
+
+
 
 .project-name {
   font-size: 1.2rem;
   margin: 0 10px 0 0;
+}
+
+.project-name:hover .link-icon {
+  opacity: 0.8;
+  transform: rotate(45deg);
 }
 
 .proj-descr {
